--- a/app/src/main/res/layout/activity_ongoing_events.xml
+++ b/app/src/main/res/layout/activity_ongoing_events.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -24,7 +25,7 @@
                 android:layout_margin="30dp"
                 android:text="Raging Events 🔥"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="30sp">
 
             </TextView>
@@ -32,7 +33,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/fragmentcertification"
-            android:layout_width="wrap_content"
+            android:layout_width="411dp"
             android:layout_height="wrap_content"
             android:layout_columnSpan="2"
             android:layout_margin="12dp"
