--- a/app/src/main/res/layout/activity_past_events.xml
+++ b/app/src/main/res/layout/activity_past_events.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background">
 
 
         <LinearLayout
@@ -25,7 +26,7 @@
                 android:layout_gravity="center"
                 android:layout_margin="30dp"
                 android:text="Events Ended "
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="30sp">
 
             </TextView>
@@ -33,7 +34,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/certi"
-            android:layout_width="wrap_content"
+            android:layout_width="401dp"
             android:layout_height="wrap_content"
             android:layout_columnSpan="2"
             android:layout_margin="12dp"
@@ -43,7 +44,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
